--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.1.0",
     "@vercel/postgres": "^0.7.2",
-    "dotenv": "^16.4.1"
+    "dotenv": "^16.4.1",
+    "express": "^5.1.0"
+  },
+  "devDependencies": {
+    "http-proxy-middleware": "^3.0.5"
   }
 }
