--- a/package.json
+++ b/package.json
@@ -11,9 +11,19 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@debut/indicators": "^1.3.22",
     "@vercel/postgres": "^0.7.2",
+    "axios": "^1.9.0",
+    "axios-debug-log": "^1.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.1",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "fincal": "^1.0.6",
+    "isin-validator": "^1.1.1",
+    "js-yaml": "^4.1.0",
+    "moment": "^2.30.1",
+    "xlsx": "^0.18.5",
+    "yahoo-finance2": "^2.13.3"
   },
   "devDependencies": {
     "http-proxy-middleware": "^3.0.5"
