--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
   "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node api/index.ts"
+    "start": "node api/index.ts",
+    "dev": "node --env-file=.env.development.local api/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@debut/indicators": "^1.3.22",
+    "@neondatabase/serverless": "^1.0.0",
     "@vercel/postgres": "^0.7.2",
     "axios": "^1.9.0",
     "axios-debug-log": "^1.0.0",
