--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node --env-file=.env.prod  api/index.ts",
+    "start": "node api/index.ts",
     "dev": "node --env-file=.env.development.local api/index.ts"
   },
   "keywords": [],
