feat: refactor database connection and add daily stock stats query

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "moment": "^2.30.1",
     "pg": "^8.16.0",
     "postgrejs": "^2.22.4",
+    "postgres": "^3.4.7",
     "xlsx": "^0.18.5",
     "yahoo-finance2": "^2.13.3"
   },
